--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -7,8 +7,18 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-18.04
-    name: Builds the Python wheel
+    name: Build the Python wheel
     steps:
+      # For tags we assume the version in setup.py is correct!
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Rewrite version for dev if not tag
+        if: "!startsWith(github.ref, 'refs/tags/')"
+        run: |
+          perl -i -pe "s/__version__\s*=\s*'(.*?)(rc.*|a.*|post.*)?'/__version__='\1.dev${GITHUB_SHA::8}'/" setup.py
+      - name: Note version
+        run: |
+          echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
@@ -16,8 +26,6 @@ jobs:
       - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Build Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
         with:
@@ -27,11 +35,8 @@ jobs:
         with:
           name: wheels
           path: dist/*.whl
-      - name: Note version
-        run: |
-          echo "PACKAGE_VERSION=$(python3 -- ./setup.py --version)" >> $GITHUB_ENV
   deploy:
-    if: github.ref == 'refs/heads/release'
+    if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-18.04
     name: Deploy wheels to PyPI
@@ -40,9 +45,17 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: wheels
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip
+          pip install twine
       - name: Publish wheels to PyPI
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          twine upload dist/*.whl
+          twine upload *.whl
