--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Build the Python wheel
     steps:
       # For tags we assume the version in setup.py is correct!
@@ -27,9 +27,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
       - name: Build Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2010_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.5.0-manylinux2014_x86_64
         with:
-          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310'
+          python-versions: 'cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -38,7 +38,7 @@ jobs:
   deploy:
     if: startsWith(github.ref, 'refs/tags/')
     needs: build
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Deploy wheels to PyPI
     steps:
       - name: Download wheels
